{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 98,
  "lineage": "66006906-46c9-ebea-f075-a6f9bb6d5a86",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-11-22T07:46:06.208-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nguyen-nhat-anh-478102/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/networks/spark-vpc",
            "params": [],
            "priority": 1000,
            "project": "nguyen-nhat-anh-478102",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_spark_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "4040"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-22T07:46:06.206-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nguyen-nhat-anh-478102/global/firewalls/allow-spark-ui",
            "log_config": [],
            "name": "allow-spark-ui",
            "network": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/networks/spark-vpc",
            "params": [],
            "priority": 1000,
            "project": "nguyen-nhat-anh-478102",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/firewalls/allow-spark-ui",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-22T07:46:06.192-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nguyen-nhat-anh-478102/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/networks/spark-vpc",
            "params": [],
            "priority": 1000,
            "project": "nguyen-nhat-anh-478102",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/disks/spark-edge"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-22T07:46:45.731-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/instances/spark-edge",
            "instance_id": "6316798998775358478",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDH0gaI42Oa71vwYjmLGHCL3nENxmfwu7Aby8OgAjDTe2iii8acgBosCb+4RZXHItuUefhQK3gsX2doS8lctQ4WJ8k2v3IHdjHXh5oOGCqHXKl5uLb3vxxG6gwFvecv1eWpbbTbEpBU2yfXOyKjeypLvf2loiIcM70MsrIA4GuolOBMENguqMsIHy2QXTm+1GwcsZBby1llQV0h0ZCUREwU0EY+gI9rxjQLNTipnsfK14FgCPa+yD25dQkSBwN7bI/vCn1JokHSJl584Y0BzuHEBJ2GXTOqiC9rlLa6hnHVdkZrgiMDT5bIF2yKhLgkZDslEsnk5UyBCRn2KGo4JA66QtRG8O8g2TO3I+sLGOto9xuYj9IdK0RNF01cFeU0XD3qdva3EnK3cKmPzN7KDZNz5ayTlJCuVe4S/A4ujgJ4F0 [...]
            },
            "metadata_fingerprint": "zChjm9iXKC4=",
            "name": "spark-edge",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.87.83.89",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/networks/spark-vpc",
                "network_ip": "10.0.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "nguyen-nhat-anh-478102"
              }
            ],
            "project": "nguyen-nhat-anh-478102",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/instances/spark-edge",
            "service_account": [
              {
                "email": "829197467831-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/disks/spark-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-22T07:46:45.419-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/instances/spark-master",
            "instance_id": "2328107435560821774",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDH0gaI42Oa71vwYjmLGHCL3nENxmfwu7Aby8OgAjDTe2iii8acgBosCb+4RZXHItuUefhQK3gsX2doS8lctQ4WJ8k2v3IHdjHXh5oOGCqHXKl5uLb3vxxG6gwFvecv1eWpbbTbEpBU2yfXOyKjeypLvf2loiIcM70MsrIA4GuolOBMENguqMsIHy2QXTm+1GwcsZBby1llQV0h0ZCUREwU0EY+gI9rxjQLNTipnsfK14FgCPa+yD25dQkSBwN7bI/vCn1JokHSJl584Y0BzuHEBJ2GXTOqiC9rlLa6hnHVdkZrgiMDT5bIF2yKhLgkZDslEsnk5UyBCRn2KGo4JA66QtRG8O8g2TO3I+sLGOto9xuYj9IdK0RNF01cFeU0XD3qdva3EnK3cKmPzN7KDZNz5ayTlJCuVe4S/A4ujgJ4F0 [...]
            },
            "metadata_fingerprint": "zChjm9iXKC4=",
            "name": "spark-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.124.236.198",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/networks/spark-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "nguyen-nhat-anh-478102"
              }
            ],
            "project": "nguyen-nhat-anh-478102",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/instances/spark-master",
            "service_account": [
              {
                "email": "829197467831-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_worker_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/disks/spark-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-22T07:46:45.511-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/instances/spark-worker-1",
            "instance_id": "5451351818637173774",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDH0gaI42Oa71vwYjmLGHCL3nENxmfwu7Aby8OgAjDTe2iii8acgBosCb+4RZXHItuUefhQK3gsX2doS8lctQ4WJ8k2v3IHdjHXh5oOGCqHXKl5uLb3vxxG6gwFvecv1eWpbbTbEpBU2yfXOyKjeypLvf2loiIcM70MsrIA4GuolOBMENguqMsIHy2QXTm+1GwcsZBby1llQV0h0ZCUREwU0EY+gI9rxjQLNTipnsfK14FgCPa+yD25dQkSBwN7bI/vCn1JokHSJl584Y0BzuHEBJ2GXTOqiC9rlLa6hnHVdkZrgiMDT5bIF2yKhLgkZDslEsnk5UyBCRn2KGo4JA66QtRG8O8g2TO3I+sLGOto9xuYj9IdK0RNF01cFeU0XD3qdva3EnK3cKmPzN7KDZNz5ayTlJCuVe4S/A4ujgJ4F0 [...]
            },
            "metadata_fingerprint": "zChjm9iXKC4=",
            "name": "spark-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.177.98.55",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/networks/spark-vpc",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "nguyen-nhat-anh-478102"
              }
            ],
            "project": "nguyen-nhat-anh-478102",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/instances/spark-worker-1",
            "service_account": [
              {
                "email": "829197467831-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_worker_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/disks/spark-worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-22T07:46:44.917-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/instances/spark-worker-2",
            "instance_id": "2512820604433622030",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDH0gaI42Oa71vwYjmLGHCL3nENxmfwu7Aby8OgAjDTe2iii8acgBosCb+4RZXHItuUefhQK3gsX2doS8lctQ4WJ8k2v3IHdjHXh5oOGCqHXKl5uLb3vxxG6gwFvecv1eWpbbTbEpBU2yfXOyKjeypLvf2loiIcM70MsrIA4GuolOBMENguqMsIHy2QXTm+1GwcsZBby1llQV0h0ZCUREwU0EY+gI9rxjQLNTipnsfK14FgCPa+yD25dQkSBwN7bI/vCn1JokHSJl584Y0BzuHEBJ2GXTOqiC9rlLa6hnHVdkZrgiMDT5bIF2yKhLgkZDslEsnk5UyBCRn2KGo4JA66QtRG8O8g2TO3I+sLGOto9xuYj9IdK0RNF01cFeU0XD3qdva3EnK3cKmPzN7KDZNz5ayTlJCuVe4S/A4ujgJ4F0 [...]
            },
            "metadata_fingerprint": "zChjm9iXKC4=",
            "name": "spark-worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.240.145.119",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/networks/spark-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "nguyen-nhat-anh-478102"
              }
            ],
            "project": "nguyen-nhat-anh-478102",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/zones/asia-southeast1-c/instances/spark-worker-2",
            "service_account": [
              {
                "email": "829197467831-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "spark_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/nguyen-nhat-anh-478102/global/networks/spark-vpc",
            "mtu": 0,
            "name": "spark-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "2058810052638958664",
            "numeric_id": "2058810052638958664",
            "project": "nguyen-nhat-anh-478102",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/networks/spark-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "spark_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-22T07:46:07.161-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/nguyen-nhat-anh-478102/regions/asia-southeast1/subnetworks/spark-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "spark-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/global/networks/spark-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "nguyen-nhat-anh-478102",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nguyen-nhat-anh-478102/regions/asia-southeast1/subnetworks/spark-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3140155978797573200
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    }
  ]
}